[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"

[[example]]
name = "Vector"
path = "Collections/Vector.rs"

[[example]]
name = "Hashmaps"
path = "Collections/Hashmaps.rs"

[[example]]
name = "convert_tohashmap"
path = "Collections/convert_tohashmap.rs"

[[example]]
name = "Iterators"
path = "Collections/Iterators.rs"

[[example]]
name = "consumingIterators"
path = "Collections/consumingIterators.rs"

[[example]]
name = "AdaptiveIterators"
path = "Collections/AdaptiveIterators.rs"

[[example]]
name = "removeodd"
path = "Collections/removeodd.rs"

[[example]]
name = "Assign"
path = "Collections/Assign.rs"


[[example]]
name = "StringSlice"
path = "Collections/StringSlice.rs"

[[example]]
name = "Generics"
path = "Collections/Generics.rs"

[[example]]
name = "Traits"
path = "Collections/Traits.rs"